--- a/HotelPtyxiaki/HotelPtyxiaki/HotelPtyxiaki.csproj
+++ b/HotelPtyxiaki/HotelPtyxiaki/HotelPtyxiaki.csproj
@@ -39,5 +39,8 @@
     <EmbeddedResource Update="Views\PageReception.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PageRestaurant.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
