--- a/HotelPtyxiaki/HotelPtyxiaki.Android/HotelPtyxiaki.Android.csproj
+++ b/HotelPtyxiaki/HotelPtyxiaki.Android/HotelPtyxiaki.Android.csproj
@@ -139,5 +139,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\closedclean.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\backgroundroomservice.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
