--- a/HotelPtyxiaki/HotelPtyxiaki/HotelPtyxiaki.csproj
+++ b/HotelPtyxiaki/HotelPtyxiaki/HotelPtyxiaki.csproj
@@ -33,6 +33,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\HomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\NetworkErrorPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
