--- a/HotelPtyxiaki/HotelPtyxiaki.Android/HotelPtyxiaki.Android.csproj
+++ b/HotelPtyxiaki/HotelPtyxiaki.Android/HotelPtyxiaki.Android.csproj
@@ -151,5 +151,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\home.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\delete.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
