--- a/HotelPtyxiaki/HotelPtyxiaki.Android/Properties/AndroidManifest.xml
+++ b/HotelPtyxiaki/HotelPtyxiaki.Android/Properties/AndroidManifest.xml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.hotelptyxiaki" android:installLocation="preferExternal">
-	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="30" />
-	<application android:label=" " android:theme="@style/MainTheme" android:icon="@drawable/reception144"></application>
+	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="31" />
+	<application android:label="SmartHotel" android:theme="@style/MainTheme" android:icon="@drawable/reception144" android:usesCleartextTraffic="true"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.CALL_PRIVILEGED" />
 	<uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" /> 
 </manifest>
