--- a/HotelPtyxiaki/HotelPtyxiaki/HotelPtyxiaki.csproj
+++ b/HotelPtyxiaki/HotelPtyxiaki/HotelPtyxiaki.csproj
@@ -23,8 +23,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="Views\PageRestaurant.xaml.cs">
+      <DependentUpon>PageRestaurant.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\PageCleaningService.xaml.cs">
       <DependentUpon>PageCleaningService.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\PageRestaurantNewRequest.xaml.cs">
+      <DependentUpon>PageRestaurantNewRequest.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -48,7 +54,7 @@
     <EmbeddedResource Update="Views\PageReception.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\PageRestaurant.xaml">
+    <EmbeddedResource Update="Views\PageRestaurantNewRequest.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
