--- a/HotelPtyxiaki/HotelPtyxiaki.Android/HotelPtyxiaki.Android.csproj
+++ b/HotelPtyxiaki/HotelPtyxiaki.Android/HotelPtyxiaki.Android.csproj
@@ -203,5 +203,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\declined.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\people.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\comment.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\calendar.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
